--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "autoprefixer": "^10.4.8",
+    "babel-plugin-styled-components": "^2.0.7",
     "next": "latest",
+    "postcss": "^8.4.16",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.1.8",
+    "twin.macro": "^2.8.2"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7"
+    "typescript": "^4.8.2"
   }
 }
