--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "twin.macro": "^2.8.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.15",
+    "@types/react": "^18.0.18",
     "typescript": "^4.8.2"
   }
 }
