--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "check-types": "tsc"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.18",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^4.8.2"
   }
 }
