--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/backgroundColorSelector.ts", "pages/_document.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/backgroundColorSelector.ts",
+    "pages/_document.jsx",
+    "pages/pokedex/[pokemon].page.jsx"
+  ],
   "exclude": ["node_modules"]
 }
